# OpenCL-Examples

./: .gitignore  CMakeLists.txt  hello.c  pipe.c  pipe.cl  pipe_resv.c  pipe_resv.cl  square.c  tests.h
tests/: CMakeLists.txt  pipe.c  pipe.cl  pipe_resv.c  pipe_resv.cl  square.c  square.cl  tests.h
utils/: CMakeLists.txt
utils/cl2h/: CMakeLists.txt  cl2h.cpp
